k8s/identityservice.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: identityservice
  namespace: cloudnativeecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: identityservice

  template:
    metadata:
      labels:
        app: identityservice

    spec:
      containers:
      - name: identityservice

        image: cloudnativeecommerce-identityservice:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3

---

apiVersion: v1
kind: Service

metadata:
  name: identityservice
  namespace: cloudnativeecommerce

spec:
  selector:
    app: identityservice

  ports:
  - port: 8080
    targetPort: 8080

  type: ClusterIP
