k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb
  namespace: cloudnativeecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb
        image: mongo

        ports:
        - containerPort: 27017

---

apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: cloudnativeecommerce

spec:
  selector:
    app: mongodb

  ports:
  - port: 27017
    targetPort: 27017

  type: ClusterIP
