k8s/productservice.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: productservice
  namespace: cloudnativeecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: productservice

  template:
    metadata:
      labels:
        app: productservice

    spec:
      containers:
      - name: productservice

        # image: cloudnativeecommerce-productservice:latest
        # imagePullPolicy: Never

        image: cloudnativeecommerceacr67.azurecr.io/cloudnativeecommerce-productservice:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3

---

apiVersion: v1
kind: Service

metadata:
  name: productservice
  namespace: cloudnativeecommerce

spec:
  selector:
    app: productservice

  ports:
  - port: 8080
    targetPort: 8080

  type: ClusterIP
