k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq
  namespace: cloudnativeecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
      - name: rabbitmq

        image: rabbitmq:3-management

        ports:
        - containerPort: 5672
        - containerPort: 15672

---

apiVersion: v1
kind: Service

metadata:
  name: rabbitmq
  namespace: cloudnativeecommerce

spec:
  selector:
    app: rabbitmq

  ports:
  - name: amqp
    port: 5672
    targetPort: 5672

  - name: management
    port: 15672
    targetPort: 15672

  type: ClusterIP
