k8s/seq.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: seq
  namespace: cloudnativeecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: seq

  template:
    metadata:
      labels:
        app: seq

    spec:
      containers:
      - name: seq

        image: datalust/seq:latest
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80

        - containerPort: 5341

---

apiVersion: v1
kind: Service

metadata:
  name: seq
  namespace: cloudnativeecommerce

spec:
  selector:
    app: seq

  ports:
  - name: ui
    port: 80
    targetPort: 80

  - name: ingestion
    port: 5341
    targetPort: 5341

  type: ClusterIP
