k8s/sqlserver.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: sqlserver
  namespace: cloudnativeecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sqlserver

  template:
    metadata:
      labels:
        app: sqlserver

    spec:
      containers:
      - name: sqlserver

        image: mcr.microsoft.com/mssql/server:2022-latest

        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service

metadata:
  name: sqlserver
  namespace: cloudnativeecommerce

spec:
  selector:
    app: sqlserver

  ports:
  - port: 1433
    targetPort: 1433

  type: ClusterIP
